fix footer overflow in mdos + table formatting tweaks

--- a/www/site/template/browse.less
+++ b/www/site/template/browse.less
@@ -363,3 +363,8 @@ p.intro {
     }
   }
 }
+
+.odd ul li strong {
+  display: inline-block;
+  min-width: 60px;
+}
